1.7.0

ADD: Fix serverTimezone to UTC in mysql jdbc driver uri
ADD: upgrade java mysql connector from 5.1.49 to 8.0.16

1.6.0

ADD: fix Centos 7.7.1908 version in dockerfile
ADD: Fix net.sf.ehcache.skipUpdateCheck (#136)
ADD: upgrade java mysql connector from 5.1.47 to 5.1.49
ADD: fix /opt/keypass directory to 1000 user for docker
ADD: autoReconnect to jdbc url configuration (#116)
ADD: disable usage of SSL for mysql in jdbc url configuration (#126)
ADD: env var to set log level in docker entry point
Disable log to file in docker
ADD: allow usage of env vars in docker entry point

1.5.0

Compatibilize keypass manage service in RedHat/Centos 7.7 systemd package (#119)
Upgrade java build completely to 1.8 (#118)
Remove openjdk7 from travis (#121)

1.4.0

Upgrade mysql connector from 5.1.6 to 5.1.47
Upgrade to ehcache from 2.8.4 to 2.8.9

1.3.0

Update docker to java 1.8
Update docker to centos7

1.2.2

Add docker_enable_hostname_port_and_add_timeout_and_optimize_size

1.2.1

Bug logs: subservice log component as not apply

1.2.0

Add version endpoint
Add API to get Keypass logLevel
Fix log format according with IOTPv4
Add allow to use level as logLevel to change log level

1.1.0

docker improvements

1.0.0

return 204 at delete policy from role

0.5.0

Update CI script

0.4.4

Add Fiware-Correlator header
Add API to change Keypass logLevel
Fix docker support: start daemon


0.4.3

FIX BUG in steelskin_pep_mode about string comparation

0.4.2

ADD steelskin_pep_mode: by default evaluates each subject-id of a request separately

0.4.1

REMOVE SNAPSHOT from package name

0.4.0

ADD support policyset format at API creation PAP
FIX log format for alarms

FIX delete subject always return 204 even if not exists, now return 404
FIX Missed PolicyCombiningAlgId in XACML policy response instead of PolicySetId

0.3.0

ADD tenant support path to HTTP header

0.2.0

0.1.0