@@ -9,8 +9,13 @@ echo "INFO: keypass entrypoint start"
 [[ "${KEYPASS_DB_HOST_PORT}" == "" ]] && KEYPASS_DB_HOST_PORT=3306
 # DB_TIMEOUT in seconds. Default to 60 seconds
 [[ "${KEYPASS_DB_TIMEOUT}" == "" ]] && export KEYPASS_DB_TIMEOUT=60
+# Default MySQL user
+[[ "${KEYPASS_DB_USER}" == "" ]] && export KEYPASS_DB_USER=keypass
+# Default MySQL password
+[[ "${KEYPASS_DB_PASSWORD}" == "" ]] && export KEYPASS_DB_PASSWORD=keypass
 # LOG_LEVEL. Default INFO
 [[ "${KEYPASS_LOG_LEVEL}" == "" ]] && export KEYPASS_LOG_LEVEL=INFO
+
 
 # Check argument DB_HOST if provided
 while [[ $# -gt 0 ]]; do
@@ -39,8 +44,12 @@ sed -i "s/INFO/${KEYPASS_LOG_LEVEL}/g" /opt/keypass/config.yml
 echo "INFO: MySQL endpoint <${KEYPASS_DB_HOST_VALUE}>"
 echo "INFO: KEYPASS_DB_HOST_NAME <${KEYPASS_DB_HOST_NAME}>"
 echo "INFO: KEYPASS_DB_HOST_PORT <${KEYPASS_DB_HOST_PORT}>"
+echo "INFO: KEYPASS_DB_USER <${KEYPASS_DB_USER}>"
+echo "INFO: KEYPASS_DB_PASSWORD <${KEYPASS_DB_PASSWORD}>"
 
 sed -i "s/mysql:\/\/localhost/mysql:\/\/${KEYPASS_DB_HOST_VALUE}/g" /opt/keypass/config.yml
+sed -i "s/user: keypass/user: ${KEYPASS_DB_USER}/g" /opt/keypass/config.yml
+sed -i "s/password: keypass/password: ${KEYPASS_DB_USER}/g" /opt/keypass/config.yml
 
 # Wait until DB is up or exit if timeout
 # Current time in seconds
